== 0.1.4
* Xpath searches with attribute values containing a <tt>/</tt>, like <tt>style[@type="text/css"]</tt>, broke the query parser.

== 0.1.3 - 2010.06.20
* The Xpath function 's' will return an empty Rind::Node rather than +nil+.
* Processing instructions were not being treated as nodes.
* DocType nodes were lacking proper equality checks.
* The +next+, +next_sibling+, +prev+ and +prev_sibling+ functions were not returning the correct nodes when other available nodes matched <tt>==</tt>.
* Adding +exact_index+ function to Rind::Nodes. (used in previous bug fix)

== 0.1.2 - 2010.06.17
* When parsing HTML, script and style tags will not break because of a "<" in their content.
* Tag names can now have numbers. Previously heading tags would not parse correctly.

== 0.1.1 - 2010.06.14
* Attributes without a value or with a value containing a space broke the parser.
* Text nodes with newlines were being cleared when they should not have been.

== 0.1.0 - 2010.06.12
* Initial release.