@@ -3,21 +3,22 @@ require 'rind'
 
 class ManipulateTest < Test::Unit::TestCase
 	def setup
-		@p = Rind::Html::P.new(:children => ['This is some text!'])
-		@br = Rind::Html::Br.new()
-		@hr = Rind::Html::Hr.new()
+		@a = Rind::Html::A.new()
+		@b1 = Rind::Html::B.new()
+		@b2 = Rind::Html::B.new()
+		@a.children.push(@b1, @b2)
 	end
 
 	def test_insert_after
-		assert_equal(@p.children.first.insert_after(@br, @hr), ['This is some text!', @br, @hr])
+		assert_equal(@a.children[1].insert_after('foo'), [@b1, @b2, 'foo'])
 	end
 
 	def test_insert_before
-		assert_equal(@p.children.first.insert_before(@br, @hr), [@br, @hr, 'This is some text!'])
+		assert_equal(@a.children[1].insert_before('foo'), [@b1, 'foo', @b2])
 	end
 
 	def test_remove
-		assert_equal(@p.children.first.remove, 'This is some text!')
-		assert(@p.children.empty?)
+		assert_equal(@a.children[1].remove, @b2)
+		assert(@a.children.empty?)
 	end
 end
